Correcciones y avance, acabar explicación volumen

--- a/biblio.bib
+++ b/biblio.bib
@@ -29,3 +29,38 @@
   year={2021},
   publisher={STM Journals}
 }
+
+%https://files.eric.ed.gov/fulltext/EJ1083242.pdf       Papiro de moscú john w harris
+% https://mathworld.wolfram.com/PyramidalFrustum.html
+@article{butuner2015using,
+  title={Using History of Mathematics to Teach Volume Formula of Frustum Pyramids: Dissection Method.},
+  author={Butuner, Suphi Onder},
+  journal={Universal Journal of Educational Research},
+  volume={3},
+  number={12},
+  pages={1034--1048},
+  year={2015},
+  publisher={ERIC}
+}
+
+% Artículo sobre espesor variable https://journals.pan.pl/Content/109465/PDF/AME_125441.pdf
+@article{kulkarni2018variable,
+  title={Variable thickness approach for finding minimum laminate thickness and investigating effect of different design variables on its performance},
+  author={Kulkarni, Nishant Shashikant and Tripathi, Vipin Kumar},
+  journal={Archive of Mechanical Engineering},
+  volume={65},
+  number={4},
+  year={2018}
+}
+
+%El artículo original del papiro de moscú
+@article{gunn1929four, 
+  title={Four geometrical problems from the Moscow mathematical papyrus},
+  author={Gunn, Battiscombe and Peet, T Eric},
+  journal={The Journal of Egyptian Archaeology},
+  volume={15},
+  number={1},
+  pages={167--185},
+  year={1929},
+  publisher={SAGE Publications Sage UK: London, England}
+}
