--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt, a4paper]{article} %tamaño mínimo de letra 11pto.
 
+\usepackage[dvipsnames]{xcolor} %Para colores raros que quiera usar.
+
 \usepackage{amsfonts} %Para poder poner letras bonitas de números naturales etc.
 \usepackage{tikz} % Para hacer recuadros para las fórmulas
 \usepackage{mdframed} % Para hacer cuadritos
